# family-infra-service

./: .gitignore  system-design.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_families.py  002_create_users.py  003_create_chat_rooms.py  004_create_calendar_events.py  005_create_calendar_event_attendees.py  006_create_media_files.py
backend/app/: config.py  main.py
backend/app/core/: auth.py  dependencies.py  exceptions.py  middleware.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  calendar_event.py  calendar_event_attendee.py  chat_room.py  family.py  media_file.py  user.py
backend/app/repositories/: calendar_event_repository.py  chat_room_repository.py  family_repository.py  media_file_repository.py  user_repository.py
backend/app/routers/: auth.py  calendar_events.py  chat_rooms.py  families.py  media.py  members.py
backend/app/schemas/: auth.py  calendar_event.py  chat_room.py  family.py  media.py  user.py
backend/app/services/: auth_service.py  calendar_service.py  chat_service.py  family_service.py  media_service.py  notification_service.py  user_service.py
backend/app/utils/: cloud_tasks.py  firestore.py  gcs.py
backend/tests/: conftest.py
backend/tests/factories/: calendar_event_factory.py  chat_room_factory.py  family_factory.py  user_factory.py
backend/tests/integration/: test_auth_router.py  test_families_router.py
backend/tests/unit/: test_auth_service.py  test_calendar_service.py  test_chat_service.py  test_user_service.py  (+2 more)
(+140 files in other folders)
